# lecture-testing-task

./: .gitignore
.github/workflows/: ci.yml
05_hw/: .clang-format  CMakeLists.txt  cmake-kits.json  main.c  stack.h
05_hw/benchmarks/: CMakeLists.txt  stack_benchmark.cpp
05_hw/src/: CMakeLists.txt  main.c  stack.c
05_hw/tests/: CMakeLists.txt  stack_test.cpp
